--- a/itamsac/_config.yml
+++ b/itamsac/_config.yml
@@ -23,7 +23,7 @@ email: itamsportsanalytics@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Official website for the 2024 ITAM Sports Analytics Conference.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://itam-sports-analytics-conference.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://itam-sports-analytics-conference.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ItamMoneyball
 github_username:  itam-sports-analytics-conference
 
