Refactor landing page | Add hackathon page | Add gallery

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,6 +29,8 @@ github_username:  itam-sports-analytics-conference
 
 # Build settings
 theme: minima
+# Build settings
+markdown: kramdown
 plugins:
   - jekyll-feed
 
